--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1 Umer Habib
+  h1 Moeed (sp18-bse-009-A)
     
-    <p>sir if you click on small Home it will take you to task 1 and if you click on products it will take you to task 3 </p>
+    
   
